--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!doctype html>
    <html>
-
+<body>
     <head>
     <link type="text/css" rel="stylesheet" href="style.css">
     </head>
 
-    <body>
-      <h1> About Me </h1>
-     <a href="index.html"> About </a>
-     <a href="portfolio.html"> Portfolio </a>
+    <div>
+    <a href="index.html"> <center> About | </a> 
+     <a href="portfolio.html"> Portfolio </a> </center>
+     </div>
+
+      <h1> <center> SARAH PERNICK </h1> </center>
+     
+
+     <h2> <center> Life of an Aspiring Front End Developer </h2> </center>
+
+    <img src="IMG_6651.JPG" id="jump" align="right"/>
+
+     <p> I've had 6 hours of HTML and CSS training at General Assembly. You should probably hire me. 
+     If nothing else, you've got to be curious what 6 hours of training achieves. <br/>You're looking at it. </p> 
+
+     <p> Mic drop. </p> 
 
      </body>
 
